--- a/index.css
+++ b/index.css
@@ -3,11 +3,12 @@
 }
 #topNav {
   background-color: #e4e4e4;
-  /* margin-top: -12px; */
-  /* width: 105%; */
-  /* margin-left: -10px; */
+  margin-top: -12px;
+  width: 105%;
+  margin-left: -10px;
   display: flex;
-  /* height: 30px; */
+  padding-left: 10px;
+  padding-right: 10px;
 }
 #topNav > p {
   font-size: x-small;
@@ -15,6 +16,15 @@
   font-family: "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial,
     sans-serif;
 }
+#topNav > a {
+  font-size: x-small;
+  padding: 10px 10px;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial,
+    sans-serif;
+  color: black;
+  text-decoration: none;
+}
+
 #topNav > div {
   width: 54%;
   height: auto;
@@ -27,6 +37,7 @@
   justify-content: space-evenly;
   width: 100%;
   height: 50px;
+  border:1px solid rgb(255, 255, 255);
 }
 input {
   height: 20px;
@@ -34,24 +45,30 @@ input {
   font-size: x-small;
   color: #a9a6a6;
   padding: 5px 5px;
-  border-radius: 5px;
-  border: 1px solid white;
+  border: 1px solid#e4e4e4;
   background-color: #e4e4e4;
+  margin-left: -32px;
+}
+input:hover {
+  font-size: x-small;
+  color: #000000;
+  padding: 5px 5px;
+  border-radius: 5px;
+  background-color:#e4e4e4;
+  font-weight: 600;
+}
+#search{
+  background-color: #e4e4e4;
+  padding:7.5px;
+}
+#india{
+  border-radius: 50%;
+  width:50%;
+  margin-right: -20px;
 }
 #bewakoof {
-  width: 150px;
-  margin-right: 20px;
+  width: 140px;
 }
-#nav > h4 {
-  font-family: "Gill Sans MT";
-  font-weight: 300;
-  letter-spacing: 1px;
-}
-#nav > div {
-  width: 130px;
-  /* border: 1px solid black; */
-}
-
 #nav > p {
   background-color: white;
 }
@@ -93,25 +110,30 @@ input {
     /* border: 1px solid black; */
   }
 }
+#matrix2{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: auto;
 
+}
 #container {
   height: auto;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(19, 16, 16);
   border: 1px solid green;
 }
 
 #bewakoof2 {
   color: rgb(255, 225, 0);
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid rgb(19, 16, 16);
   height: auto;
   width: 90%;
   margin: auto;
   margin-top: 50px;
-} 
+}
 
 #midContainer {
   display: flex;
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid rgb(19, 16, 16);
   width: 90%;
   margin: auto;
   height: auto;
@@ -127,7 +149,7 @@ input {
   margin-bottom: 25px;
 }
 #midContainer div {
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid rgb(19, 16, 16);
   width: auto;
 }
 #midContainer p {
@@ -141,40 +163,46 @@ input {
   width: 60%;
 }
 
+.img2{
+  width:100%;
+}
+
 #subscribe input {
-  background-color: black;
+  background-color: rgb(19, 16, 16);
   color: rgb(234, 234, 234);
-  border: 1px solid black;
   border-bottom: 1px solid rgb(255, 225, 0);
   width: 110px;
   border-radius: 0px;
-  font-size: small;
+  font-size: x-small;
   margin-right: -10px;
+  border: 0;
+  outline: none;
 }
 #subscribe button {
   background-color: rgb(255, 225, 0);
   padding: 7px 10px;
+  font-family: Helvetica, sans-serif;
 }
 
 #media {
-  color: rgb(229, 202, 3);
+  color: rgb(255, 225, 0);
   display: flex;
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid rgb(19, 16, 16);
   width: 90%;
   margin: auto;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 #media > div {
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid rgb(19, 16, 16);
 }
 
 #media > div:nth-child(2) > img {
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid rgb(19, 16, 16);
   width: 40%;
 }
 
 #media > div:nth-child(3) > img {
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid rgb(19, 16, 16);
   width: 60%;
 }
 
@@ -193,52 +221,50 @@ input {
   width: 200px;
 }
 
-#itemType{
+#itemType {
   display: flex;
   justify-content: space-evenly;
   width: 80%;
   margin-left: 40px;
 }
 
-#itemType>div{
-  border: 1px solid rgb(0, 0, 0);
+#itemType > div {
+  border: 1px solid rgb(19, 16, 16);
   text-align: left;
   line-height: 2.5px;
 }
-#itemType>div>h3{
+#itemType > div > h3 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 400;
 }
 
-#itemType>div>h5{
+#itemType > div > h5 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 400;
   margin-top: 40px;
 }
-#itemType>div>p{
+#itemType > div > p {
   font-weight: 100;
   font-size: small;
 }
-#teal>h3{
+#teal > h3 {
   line-height: 25px;
 }
 
-#history{
-  color:white;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+#history {
+  color: white;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   width: 87%;
   margin: auto;
 }
-#history>h3{
+#history > h3 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 400;
 }
-#history>p{
+#history > p {
   font-size: small;
   color: rgb(230, 230, 230);
-  font-weight:100;
+  font-weight: 100;
   line-height: 20px;
   letter-spacing: 1px;
 }
-
-
